--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Graduate student, University of Minnesota -  Twin Cities.
+<!DOCTYPE html>
+<html>
+<head>
+<title> Abhitesh Ranjan </title>
+</head>
+<body>
+
+	<h3>ABHITESH RANJAN</h3>
+	Graduate student, University of Minnesota -  Twin Cities.
+
+</body>
+</html>
