Job market page.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
 <body>
 
 	<h3>ABHITESH RANJAN</h3>
-	Graduate student, University of Minnesota -  Twin Cities.
+	Graduate student, University of Minnesota -  Twin Cities.<br>
+	Research interest: International Macroeconomics, Monetary Economics, and Public Economics.<br>
+	<!-- <hr> -->
+	<h4>Job Market Paper</h4>
+	<p>Effect of reserve accumulation on employment.[<a href="files/jmp20240206.pdf" target="_blank">Paper</a>][<a href="files/codes.zip" target="_blank">Codes</a>] </p>
+	<h4>Work in progress</h4>
+	<ul>
+		<li> Reserve policy in small open economy. </li>
+		<p> A tractable model for analyzing macroeconomic effects of foreign reserve. The idea is to reduce the model into a set of log linearized equations that is easy to scale. </p>
+		<li> Optimal currency composition of foreign reserve. </li>
+		<p> An extension of Backus-Kehoe model with exchange rate uncertainity and risk averse financial intermediaries. </p>
+		<li> Monetary policy with endogenously sticky prices. </li>
+		<p> A monetary model with inventory. The project is interesting due to following reasons. First, incorporating inventory provides theoretical explanation for price stickiness. Second, it has been found that labor market response is stronger relative to service sector (Singh, Suda, Zervou, AEA P&amp;P, 2002). I expect inventory accumulation by manufacturing firm to explain this observation. Third a new way of classifying manufacturing/service sector on the basis of shelf life of the product is proposed in contrast to factor intensity.</p>
+	</ul>
+	<img src="files/fredgraph.png" alt="graph" width="1138" height="450">
 
 </body>
 </html>
